apps/authentication/gateway/chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
    cert-manager.io/Clusterissuer: "selfsigned-cluster-issuer"
  name: ingress
spec:
  rules:
    - host: victor.io
      http:
        paths:
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 8000
